--- a/experiment-2/analysis/stats/dynamics.Rmd
+++ b/experiment-2/analysis/stats/dynamics.Rmd
@@ -10,7 +10,7 @@ Description: This is a summary of dynamics analysis.
 
 - Last checked: `r format(Sys.Date(), "%d-%b-%Y")`
 
-# Experimental Design{#design}
+# Experimental Design
 - Independent variables: Condition (2 levels: teaching vs. performing) x Subcomponent (2 levels: forte vs. piano / legato vs. staccato)
 - Dependent variables: Key Velocity (KV), KV difference
 
@@ -172,13 +172,11 @@ vel_dyn_trial
 ### Plot
 #### Line graph
 ```{r vel-dyn-trial-line-forte, echo = FALSE, fig.height = 4}
-ggline(vel_dyn_trial[Subcomponent == "Forte"], x = "TrialNr", y = "Mean", facet.by = "SubNr", shape = "Condition", color = "Condition", xlab = "TrialNr", ylab = "KV (0-127)", title = "KV: Dynamics/Forte") +
-  scale_x_continuous(breaks = seq(1,8,1))
+ggline(vel_dyn_trial[Subcomponent == "Forte"], x = "TrialNr", y = "Mean", facet.by = "SubNr", shape = "Condition", color = "Condition", xlab = "TrialNr", ylab = "KV (0-127)", title = "KV: Dynamics/Forte") + scale_x_continuous(breaks = seq(1,8,1))
 ```
 
 ```{r vel-dyn-trial-line-piano, echo = FALSE, fig.height = 4}
-ggline(vel_dyn_trial[Subcomponent == "Piano"], x = "TrialNr", y = "Mean", facet.by = "SubNr", shape = "Condition", color = "Condition", xlab = "TrialNr", ylab = "KV (0-127)", title = "KV: Dynamics/Piano") +
-  scale_x_continuous(breaks = seq(1,8,1))
+ggline(vel_dyn_trial[Subcomponent == "Piano"], x = "TrialNr", y = "Mean", facet.by = "SubNr", shape = "Condition", color = "Condition", xlab = "TrialNr", ylab = "KV (0-127)", title = "KV: Dynamics/Piano") + scale_x_continuous(breaks = seq(1,8,1))
 ```
 
 ## 4. Trial by trial - group{#vel_dyn_group_trial}
@@ -195,13 +193,11 @@ vel_dyn_trial_all
 - Error bars show SEM of the mean.
 
 ```{r vel-dyn-trial-all-line-forte, echo = FALSE}
-ggline(vel_dyn_trial[Subcomponent == "Forte"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", xlab = "Trial", ylab = "KV (0-127)", title = "KV: Dynamics/Forte") +
-    scale_x_continuous(breaks = seq(1,8,1))
+ggline(vel_dyn_trial[Subcomponent == "Forte"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", xlab = "Trial", ylab = "KV (0-127)", title = "KV: Dynamics/Forte") + scale_x_continuous(breaks = seq(1,8,1))
 ```
 
 ```{r vel-dyn-trial-all-line-piano, echo = FALSE}
-ggline(vel_dyn_trial[Subcomponent == "Piano"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", xlab = "Trial", ylab = "KV (0-127)", title = "KV: Dynamics/Piano") +
-    scale_x_continuous(breaks = seq(1,8,1))
+ggline(vel_dyn_trial[Subcomponent == "Piano"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", xlab = "Trial", ylab = "KV (0-127)", title = "KV: Dynamics/Piano") + scale_x_continuous(breaks = seq(1,8,1))
 ```
 
 # Key Velocity Difference (Difference) - Dynamics
@@ -367,13 +363,11 @@ vel_art_trial
 ### Plot
 #### Line graph
 ```{r vel-art-trial-line-legato, echo = FALSE, fig.height = 4}
-ggline(vel_art_trial[Subcomponent == "Legato"], x = "TrialNr", y = "Mean", facet.by = "SubNr", shape = "Condition", color = "Condition", xlab = "TrialNr", ylab = "KV (0-127)", title = "KV: Articulation/Legato") +
-  scale_x_continuous(breaks = seq(1,8,1))
+ggline(vel_art_trial[Subcomponent == "Legato"], x = "TrialNr", y = "Mean", facet.by = "SubNr", shape = "Condition", color = "Condition", xlab = "TrialNr", ylab = "KV (0-127)", title = "KV: Articulation/Legato") + scale_x_continuous(breaks = seq(1,8,1))
 ```
 
 ```{r vel-art-trial-line-staccato, echo = FALSE, fig.height = 4}
-ggline(vel_art_trial[Subcomponent == "Staccato"], x = "TrialNr", y = "Mean", facet.by = "SubNr", shape = "Condition", color = "Condition", xlab = "TrialNr", ylab = "KV (0-127)", title = "KV: Articulation/Staccato") +
-  scale_x_continuous(breaks = seq(1,8,1))
+ggline(vel_art_trial[Subcomponent == "Staccato"], x = "TrialNr", y = "Mean", facet.by = "SubNr", shape = "Condition", color = "Condition", xlab = "TrialNr", ylab = "KV (0-127)", title = "KV: Articulation/Staccato") + scale_x_continuous(breaks = seq(1,8,1))
 ```
 
 ## 4. Trial by trial - group{#vel_art_group_trial}
@@ -390,13 +384,11 @@ vel_art_trial_all
 - Error bars show SEM of the mean.
 
 ```{r vel-art-trial-all-line-legato, echo = FALSE}
-ggline(vel_art_trial[Subcomponent == "Legato"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", xlab = "Trial", ylab = "KV (0-127)", title = "KV: Articulation/Legato") +
-  scale_x_continuous(breaks = seq(1,8,1))
+ggline(vel_art_trial[Subcomponent == "Legato"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", xlab = "Trial", ylab = "KV (0-127)", title = "KV: Articulation/Legato") + scale_x_continuous(breaks = seq(1,8,1))
 ```
 
 ```{r vel-art-trial-all-line-staccato, echo = FALSE}
-ggline(vel_art_trial[Subcomponent == "Staccato"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", xlab = "Trial", ylab = "KV (0-127)", title = "KV: Articulation/Staccato") +
-  scale_x_continuous(breaks = seq(1,8,1))
+ggline(vel_art_trial[Subcomponent == "Staccato"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", xlab = "Trial", ylab = "KV (0-127)", title = "KV: Articulation/Staccato") + scale_x_continuous(breaks = seq(1,8,1))
 ```
 
 # Key Velocity Difference (Difference) - Articulation{#vel_articulation}
@@ -414,8 +406,7 @@ vel_diff_art
 ### Plot
 #### Box plot
 ```{r vel-diff-art-box,  echo = FALSE}
-ggboxplot(vel_diff_art_trial[, .(N = .N, Mean = mean(Mean), SD = sd(Mean)), by = .(SubNr, Condition, Skill, Subcomponent, BlockNr, TrialNr)], "SubNr", "Mean", color = "Condition", xlab = "SubNr", ylab = "Difference", title = "KV-Diff: Articulation") +
-  facet_grid(Subcomponent ~ .)
+ggboxplot(vel_diff_art_trial[, .(N = .N, Mean = mean(Mean), SD = sd(Mean)), by = .(SubNr, Condition, Skill, Subcomponent, BlockNr, TrialNr)], "SubNr", "Mean", color = "Condition", xlab = "SubNr", ylab = "Difference", title = "KV-Diff: Articulation") + facet_grid(Subcomponent ~ .)
 ```
 
 ## 2. All - group{#vel_diff_art_group_all}
@@ -465,13 +456,11 @@ vel_diff_art_trial
 ### Plot
 #### Line graph
 ```{r vel-diff-artt-rial-line-ltos, echo = FALSE, fig.height = 4}
-ggline(vel_diff_art_trial[Subcomponent == "LtoS"], x = "TrialNr", y = "Mean", facet.by = "SubNr", shape = "Condition", color = "Condition", xlab = "TrialNr", ylab = "Difference", title = "KV-Diff: Articulation/Legato to Staccato") +
-  scale_x_continuous(breaks = seq(1,8,1))
+ggline(vel_diff_art_trial[Subcomponent == "LtoS"], x = "TrialNr", y = "Mean", facet.by = "SubNr", shape = "Condition", color = "Condition", xlab = "TrialNr", ylab = "Difference", title = "KV-Diff: Articulation/Legato to Staccato") + scale_x_continuous(breaks = seq(1,8,1))
 ```
 
 ```{r vel-diff-art-trial-line-stol, echo = FALSE, fig.height = 4}
-ggline(vel_diff_art_trial[Subcomponent == "StoL"], x = "TrialNr", y = "Mean", facet.by = "SubNr", shape = "Condition", color = "Condition", xlab = "TrialNr", ylab = "Difference", title = "KV-Diff: Articulation/Staccato to Legato") +
-  scale_x_continuous(breaks = seq(1,8,1))
+ggline(vel_diff_art_trial[Subcomponent == "StoL"], x = "TrialNr", y = "Mean", facet.by = "SubNr", shape = "Condition", color = "Condition", xlab = "TrialNr", ylab = "Difference", title = "KV-Diff: Articulation/Staccato to Legato") + scale_x_continuous(breaks = seq(1,8,1))
 ```
 
 ## 4. Trial by trial - group{#vel_diff_art_group_trial}
@@ -488,13 +477,11 @@ vel_diff_art_trial_all
 - Error bars show SEM of the mean.
 
 ```{r vel-diff-art-trial-all-line-ltos, echo = FALSE}
-ggline(vel_diff_art_trial[Subcomponent == "LtoS"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", xlab = "Trial", ylab = "Difference", title = "KV-Diff: Articulation/Legato to Staccato") +
-  scale_x_continuous(breaks=seq(1,8,1))
+ggline(vel_diff_art_trial[Subcomponent == "LtoS"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", xlab = "Trial", ylab = "Difference", title = "KV-Diff: Articulation/Legato to Staccato") + scale_x_continuous(breaks=seq(1,8,1))
 ```
 
 ```{r vel-diff-art-trial-all-line-stol, echo = FALSE}
-ggline(vel_diff_art_trial[Subcomponent == "StoL"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", xlab = "Trial", ylab = "Difference", title = "KV-Diff: Articulation/Staccato to Legato") +
-  scale_x_continuous(breaks=seq(1,8,1))
+ggline(vel_diff_art_trial[Subcomponent == "StoL"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", xlab = "Trial", ylab = "Difference", title = "KV-Diff: Articulation/Staccato to Legato") + scale_x_continuous(breaks=seq(1,8,1))
 ```
 
 # Sequence plot{#sequence}
@@ -503,13 +490,11 @@ ggline(vel_diff_art_trial[Subcomponent == "StoL"], x = "TrialNr", y = "Mean", ad
 # For each individual
 vel_dyn_seq <- dt_vel_dyn[, .(N = .N, Mean = mean(Velocity), SD = sd(Velocity)), by = .(SubNr, Condition, Skill, RowNr)]
 
-ggline(vel_dyn_seq, x = "RowNr", y = "Mean", add = "mean_se", position = position_dodge(.2), linetype = "Condition", shape = "Condition", color = "Condition", xlab = "Note", ylab = "", title = "KV: Dynamics") +
-  scale_x_continuous(breaks = seq(1,72,1))
+ggline(vel_dyn_seq, x = "RowNr", y = "Mean", add = "mean_se", position = position_dodge(.2), linetype = "Condition", shape = "Condition", color = "Condition", xlab = "Note", ylab = "", title = "KV: Dynamics") + scale_x_continuous(breaks = seq(1,72,1))
 
 vel_diff_dyn_seq <- dt_vel_diff_dyn[, .(N = .N, Mean = mean(Diff), SD = sd(Diff)), by = .(SubNr, Condition, Skill, Interval)]
 
-ggline(vel_diff_dyn_seq, x = "Interval", y = "Mean", add = "mean_se", position = position_dodge(.2), linetype = "Condition", shape = "Condition", color = "Condition", xlab = "Interval", ylab = "", title = "KV-Diff: Dynamics") +
-  scale_x_continuous(breaks = seq(1,71,1))
+ggline(vel_diff_dyn_seq, x = "Interval", y = "Mean", add = "mean_se", position = position_dodge(.2), linetype = "Condition", shape = "Condition", color = "Condition", xlab = "Interval", ylab = "", title = "KV-Diff: Dynamics") + scale_x_continuous(breaks = seq(1,71,1))
 ```
 
 ## Articulation{#sequence_art}
@@ -517,20 +502,17 @@ ggline(vel_diff_dyn_seq, x = "Interval", y = "Mean", add = "mean_se", position =
 # For each individual
 vel_art_seq <- dt_vel_art[, .(N = .N, Mean = mean(Velocity), SD = sd(Velocity)), by = .(SubNr, Condition, Skill, RowNr)]
 
-ggline(vel_art_seq, x = "RowNr", y = "Mean", add = "mean_se", position = position_dodge(.2), linetype = "Condition", shape = "Condition", color = "Condition", xlab = "Note", ylab = "", title = "KV: Articulation") +
-  scale_x_continuous(breaks = seq(1,72,1))
+ggline(vel_art_seq, x = "RowNr", y = "Mean", add = "mean_se", position = position_dodge(.2), linetype = "Condition", shape = "Condition", color = "Condition", xlab = "Note", ylab = "", title = "KV: Articulation") + scale_x_continuous(breaks = seq(1,72,1))
 
 vel_diff_art_seq <- dt_vel_diff_art[, .(N = .N, Mean = mean(Diff), SD = sd(Diff)), by = .(SubNr, Condition, Skill, Interval)]
 
-ggline(vel_diff_art_seq, x = "Interval", y = "Mean", add = "mean_se", position = position_dodge(.2), linetype = "Condition", shape = "Condition", color = "Condition", xlab = "Interval", ylab = "", title = "KV-Diff: Articulation") +
-  scale_x_continuous(breaks = seq(1,71,1))
+ggline(vel_diff_art_seq, x = "Interval", y = "Mean", add = "mean_se", position = position_dodge(.2), linetype = "Condition", shape = "Condition", color = "Condition", xlab = "Interval", ylab = "", title = "KV-Diff: Articulation") + scale_x_continuous(breaks = seq(1,71,1))
 ```
 
 # Additional analysis{#additional}
 - Normalise KV difference by the range of KV value between forte and piano for each participant.
 
 ## Normalised KV difference per trial
-
 ```{r, echo = FALSE, warning = FALSE}
 # normalise diff by KV range
 vel_diff_dyn_trial$NormalisedDiff <- 0
