--- a/experiment-1/analysis/stats/variability.Rmd
+++ b/experiment-1/analysis/stats/variability.Rmd
@@ -78,7 +78,8 @@ ggline(ioi_dyn_seq_each, x = "Interval", y = "Mean", add = "mean_se", shape = "C
 ioi_cv_trial <- dt_ioi[, .(N = .N, Mean = mean(IOI), SD = sd(IOI), CV = sd(IOI)/mean(IOI)), by = .(SubNr, Condition, Skill, BlockNr, TrialNr)]
 ioi_cv_subject <- ioi_cv_trial[, .(N = .N, MeanCV = mean(CV), SD = sd(CV)), by = .(SubNr, Condition, Skill)]
 ioi_cv_subject <- ioi_cv_subject[order(SubNr, Condition, Skill)] # ordering
-ioi_cv_subject
+ioi_cv <- ioi_cv_subject[, .(N = .N, MeanCV = mean(MeanCV), MedianCV = median(MeanCV), SD = sd(MeanCV), IQR = IQR(MeanCV)), by = .(Condition, Skill)]
+ioi_cv
 
 ggplot(ioi_cv_subject, aes(x = Condition, y = MeanCV, color = Condition)) +
   geom_boxplot() +
@@ -89,26 +90,38 @@ ggplot(ioi_cv_subject, aes(x = Condition, y = MeanCV, color = Condition)) +
 ```
 
 ### Stats
-- With Participant 2 (outside +/- 3SD)
+1) Articulation
 
 ```{r, echo = FALSE}
-# descriptive stats
-ioi_cv_subject[, .(.N, MeanCV = mean(MeanCV), SDCV = sd(MeanCV)), by = .(Condition, Skill)]
+# normality check
+diff <- ioi_cv_subject[Condition == "teaching" & Skill == "articulation"]$MeanCV-ioi_cv_subject[Condition == "performing" & Skill == "articulation"]$MeanCV
+ioi_art_cv_norm <- shapiro.test(diff)
+ioi_art_cv_norm
 
-aov_ez(id = "SubNr", dv = "MeanCV",
-       within = c("Condition", "Skill"),
-       data = ioi_cv_subject)
+# wilcoxon test
+ioi_art_cv_wilcoxon <- wilcox.test(MeanCV ~ Condition, data = ioi_cv_subject[Skill == "articulation"], paired = TRUE, alternative = "two.sided")
+ioi_art_cv_wilcoxon
+
+# effect size
+wilcoxeff_art_cv <- ioi_cv_subject[Skill == "articulation"] %>% wilcox_effsize(MeanCV ~ Condition, paired = TRUE)
+wilcoxeff_art_cv
 ```
 
-- Without Participant 2 (outside +/- 3SD)
+2) Dynamics
 
 ```{r, echo = FALSE}
-# descriptive stats
-ioi_cv_subject[SubNr != 2, .(.N, MeanCV = mean(MeanCV), SDCV = sd(MeanCV)), by = .(Condition, Skill)]
+# normality check
+diff2 <- ioi_cv_subject[Condition == "teaching" & Skill == "dynamics"]$MeanCV-ioi_cv_subject[Condition == "performing" & Skill == "dynamics"]$MeanCV
+ioi_dyn_cv_norm <- shapiro.test(diff2)
+ioi_dyn_cv_norm
 
-aov_ez(id = "SubNr", dv = "MeanCV",
-       within = c("Condition", "Skill"),
-       data = ioi_cv_subject[SubNr != 2])
+# wilcoxon test
+ioi_dyn_cv_wilcoxon <- wilcox.test(MeanCV ~ Condition, data = ioi_cv_subject[Skill == "dynamics"], paired = TRUE, alternative = "two.sided")
+ioi_dyn_cv_wilcoxon
+
+# effect size
+wilcoxeff_dyn_cv <- ioi_cv_subject[Skill == "dynamics"] %>% wilcox_effsize(MeanCV ~ Condition, paired = TRUE)
+wilcoxeff_dyn_cv
 ```
 
 ## IOIs at transition points
@@ -116,6 +129,8 @@ aov_ez(id = "SubNr", dv = "MeanCV",
 ioi_tra_trial <- dt_ioi[Subcomponent == "LtoS" | Subcomponent == "StoL" | Subcomponent == "FtoP" | Subcomponent == "PtoF", .(N = .N, Mean = mean(IOI), SD = sd(IOI)), by = .(SubNr, Condition, Skill, BlockNr, TrialNr)]
 ioi_tra_subject <- ioi_tra_trial[, .(N = .N, Mean = mean(Mean), SD = sd(Mean)), by = .(SubNr, Condition, Skill)]
 ioi_tra_subject <- ioi_tra_subject[order(SubNr, Condition, Skill)] # ordering
+ioi_tra <- ioi_tra_subject[, .(N = .N, Mean = mean(Mean), Median = median(Mean), SD = sd(Mean), IQR = IQR(Mean)), by = .(Condition, Skill)]
+ioi_tra
 
 ggplot(ioi_tra_subject, aes(x = Condition, y = Mean, color = Condition)) +
   geom_boxplot() +
@@ -125,42 +140,43 @@ ggplot(ioi_tra_subject, aes(x = Condition, y = Mean, color = Condition)) +
   theme_pubr()
 ```
 
-```{r, echo = FALSE}
-# descriptive stats
-ioi_tra_subject[, .(.N, MeanCV = mean(Mean), SD = sd(Mean)), by = .(Condition, Skill)]
+### Stats
+1) Articulation
 
-aov_ez(id = "SubNr", dv = "Mean",
-       within = c("Condition", "Skill"),
-       data = ioi_tra_subject)
+```{r, echo = FALSE}
+# normality check
+diff3 <- ioi_tra_subject[Condition == "teaching" & Skill == "articulation"]$Mean-ioi_tra_subject[Condition == "performing" & Skill == "articulation"]$Mean
+ioi_art_tra_norm <- shapiro.test(diff3)
+ioi_art_tra_norm
+
+# wilcoxon test
+ioi_art_tra_wilcoxon <- wilcox.test(Mean ~ Condition, data = ioi_tra_subject[Skill == "articulation"], paired = TRUE, alternative = "two.sided")
+ioi_art_tra_wilcoxon
+
+# effect size
+wilcoxeff_art_tra <- ioi_tra_subject[Skill == "articulation"] %>% wilcox_d(Mean ~ Condition, paired = TRUE)
+wilcoxeff_art_tra
 ```
 
-## IOIs at transition points vs. others
-Caution: the number of points included in each transition group is considerably different.
+2) Dynamics
 
 ```{r, echo = FALSE}
-dt_ioi$Transition <- "No"
-dt_ioi[Subcomponent == "LtoS" | Subcomponent == "StoL" | Subcomponent == "FtoP" | Subcomponent == "PtoF"]$Transition <- "Yes"
+# normality check
+diff4 <- ioi_tra_subject[Condition == "teaching" & Skill == "dynamics"]$Mean-ioi_tra_subject[Condition == "performing" & Skill == "dynamics"]$Mean
+ioi_dyn_tra_norm <- shapiro.test(diff4)
+ioi_dyn_tra_norm
 
-# transition points vs. others
-ioi_tra_others_trial <- dt_ioi[, .(.N, Mean = mean(IOI), SD = sd(IOI)), by = .(SubNr, Condition, Skill, BlockNr, TrialNr, Transition)]
-ioi_tra_others_subject <- ioi_tra_others_trial[, .(.N, Mean = mean(Mean), SD = sd(Mean)), by = .(SubNr, Condition, Skill, Transition)]
-ioi_tra_others_subject <- ioi_tra_others_subject[order(SubNr, Condition, Skill)] # ordering
+# t test
+ioi_dyn_tra_t_test <- t.test(Mean ~ Condition, data = ioi_tra_subject[Skill == "dynamics"], paired = TRUE, alternative = "two.sided")
+ioi_dyn_tra_t_test
 
-# descriptive stats
-ioi_tra_others_subject[, .(.N, Mean = mean(Mean), SD = sd(Mean)), by = .(Condition, Skill, Transition)]
+# wilcoxon test
+ioi_dyn_tra_wilcoxon <- wilcox.test(Mean ~ Condition, data = ioi_tra_subject[Skill == "dynamics"], paired = TRUE, alternative = "two.sided")
+ioi_dyn_tra_wilcoxon
 
-ggplot(ioi_tra_others_subject, aes(x = Condition, y = Mean, color = Condition)) +
-  geom_boxplot() +
-  geom_line(aes(group = SubNr), size = 0.4, color = "gray") +
-  geom_point(aes(color = Condition)) +
-  facet_grid(Skill ~ Transition) +
-  theme_pubr()
-```
-
-```{r, echo = FALSE}
-aov_ez(id = "SubNr", dv = "Mean",
-       within = c("Condition", "Skill", "Transition"),
-       data = ioi_tra_others_subject)
+# effect size
+wilcoxeff_dyn_tra <- ioi_tra_subject[Skill == "dynamics"] %>% wilcox_effsize(Mean ~ Condition, paired = TRUE)
+wilcoxeff_dyn_tra
 ```
 
 ```{r export, include = FALSE}
