--- a/paper/manuscript.tex
+++ b/paper/manuscript.tex
@@ -557,11 +557,24 @@ In the teaching condition of Experiment 2, we gave participants the exact same i
 \hypertarget{data-analysis-2}{%
 \subsection{Data analysis}\label{data-analysis-2}}
 
+The tempo variability of performance was assessed with the coefficient of variation (CV) of the IOIs to in investigate the tempo stability of performance between the teaching and performing condition. CVs were calculated by dividing the standard deviation by the mean of IOIs.
+
 \hypertarget{results-experiment-1}{%
 \subsection{Results (Experiment 1)}\label{results-experiment-1}}
 
+\hypertarget{articulation-2}{%
+\subsubsection{Articulation}\label{articulation-2}}
+
+To compare the mean CVs between the teaching and performing condition, we conducted a Wilcoxon Signed-rank test, instead of a paired \emph{t}-test, because a Shapiro-Wilk test showed that the distribution of the mean difference was significantly different from the normal distribution (\emph{p} = 0.007). The Wilcoxon Signed-rank test showed that the tempo variability of performance did not significantly differ between the teaching {[}\emph{Mdn} = 0.06 (ms), \emph{IQR} = 0.02{]} and performing condition {[}\emph{Mdn} = 0.07 (ms), \emph{IQR} = 0.02{]} while playing the piece with the notated articulation (\emph{p} = 0.058, \emph{r} = 0.34, two-tailed).
+
+\hypertarget{dynamics-2}{%
+\subsubsection{Dynamics}\label{dynamics-2}}
+
 \hypertarget{results-experiment-2}{%
 \subsection{Results (Experiment 2)}\label{results-experiment-2}}
+
+\hypertarget{temporal-grouping}{%
+\section{Temporal grouping}\label{temporal-grouping}}
 
 
 \end{document}
